added animation for mc page

--- a/src/mc.html
+++ b/src/mc.html
@@ -10,7 +10,7 @@
         <main class="page">
             <section class="section">
                 <div class="container">
-                    <div class="titleFrame">
+                    <div class="titleFrame" data-aos="fade-right">
                         <div class="titleFrame__bg">
                             <img src="./images/mc-titleFrame-bg.jpg" alt="titleFrame__bg" class="titleFrame__bg-pic">
                         </div>
@@ -27,7 +27,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="ourWorks">
+                    <div class="ourWorks" data-aos="fade-right">
                         <div class="ourWorks__content">
                             <div class="ourWorks__content-title title">Наши работы</div>
                             <div class="ourWorks__samples">
@@ -108,7 +108,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="technics">
+                    <div class="technics" data-aos="fade-right">
                         <div class="technics__content">
                             <div class="technics__title title">Какие техники изучите на МК</div>
                             <div class="technics__column">
@@ -154,7 +154,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="slife">
+                    <div class="slife" data-aos="fade-right">
                         <div class="slife__bg">
                             <img src="./images/slife-bg.jpg" alt="slife-bg" class="slife__bg-pic">
                         </div>
@@ -169,7 +169,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="restauration">
+                    <div class="restauration" data-aos="fade-right">
                         <div class="restauration__content">
                             <div class="restauration__title title">Мастер-классы по реставрации мебели</div>
                             <div class="restauration__offer">
@@ -219,7 +219,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="joinery">
+                    <div class="joinery" data-aos="fade-right">
                         <div class="joinery__content">
                             <div class="joinery__title title">Мастер-классы по столярному делу</div>
                             <div class="joinery__items">
@@ -244,7 +244,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="redesign">
+                    <div class="redesign" data-aos="fade-right">
                         <div class="redesign__content">
                             <div class="redesign__texts">
                                 <div class="redesign__texts-title title">Руководство по редизайну деревянной мебели
