added paralax effect

--- a/src/mc.html
+++ b/src/mc.html
@@ -10,10 +10,9 @@
         <main class="page">
             <section class="section">
                 <div class="container">
-                    <div class="titleFrame" data-aos="fade-right">
-                        <div class="titleFrame__bg">
-                            <img src="./images/mc-titleFrame-bg.jpg" alt="titleFrame__bg" class="titleFrame__bg-pic">
-                        </div>
+
+                    <div class="titleFrame" style="background-image: url('./images/mc-titleFrame-bg.jpg');">
+
                         <div class="titleFrame__content">
                             <div class="titleFrame__content-title">
                                 <h1 class="title white text-little">Нам доверяют мебель с историей в 120 лет</h1>
@@ -154,10 +153,7 @@
             </section>
             <section class="section">
                 <div class="container">
-                    <div class="slife" data-aos="fade-right">
-                        <div class="slife__bg">
-                            <img src="./images/slife-bg.jpg" alt="slife-bg" class="slife__bg-pic">
-                        </div>
+                    <div class="slife" style="background-image: url('./images/slife-bg.jpg');">
                         <div class="slife__content">
                             <div class="slife__content-title title white">Подари вторую жизнь старой мебели и сохрани
                                 историю
