--- a/src/html/headerFurniture.html
+++ b/src/html/headerFurniture.html
@@ -9,7 +9,7 @@
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="../furniture.html" class="header__list-link passive-link">
+                        <a href="#" class="header__list-link passive-link active-link">
                             Мебель на заказ
                         </a>
                     </li>
@@ -27,9 +27,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="header__logo">
+            <a href="../index.html" class="header__logo">
                 <img src="../images/logo-big.png" alt="logo" class="header__logo-pic">
-            </div>
+            </a>
         </div>
         <div class="menu__bg">
             <div class="menu-btn js-menu-btn">
