added new section

--- a/src/furniture.html
+++ b/src/furniture.html
@@ -132,6 +132,56 @@
                                     </a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="production">
+                        <div class="production__content">
+                            <div class="production__title title">Этапы производства</div>
+                            <div class="production__tablet">
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Встреча с клиентом</div>
+                                    <div class="production__tablet-num title">1</div>
+                                </div>
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Подписание договора, внесение предоплаты
+                                    </div>
+                                    <div class="production__tablet-num title">2</div>
+                                </div>
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Выезд к клиенту на замер (при
+                                        необходимости)
+                                    </div>
+                                    <div class="production__tablet-num title">3</div>
+                                </div>
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Составление проекта</div>
+                                    <div class="production__tablet-num title">4</div>
+                                </div>
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Изготовление и согласование всех стадий с
+                                        клиентом</div>
+                                    <div class="production__tablet-num title">5</div>
+                                </div>
+                                <div class="production__tablet-item">
+                                    <div class="production__tablet-text text">Доставка и монтаж изделия (при
+                                        необходимости)
+                                    </div>
+                                    <div class="production__tablet-num title">6</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="review">
+                        <div class="review__content">
+                            <div class="review__title title">Клиенты о нас</div>
 
                         </div>
                     </div>
