--- a/src/html/script.html
+++ b/src/html/script.html
@@ -1,2 +1,3 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="js/app.min.js"></script>
