--- a/src/furniture.html
+++ b/src/furniture.html
@@ -5,8 +5,8 @@
 })
 
 <body>
-    <div class="wrapper">
-        @@include('html/headerFurniture.html', {})
+    <div class="wrapper js-furniture">
+        @@include('html/header.html', {})
         <main class="page">
             <section class="section">
                 <div class="container">
@@ -227,19 +227,19 @@
             <div class="modal__close js-modalClose">x</div>
 
             <div class="modal__content-right">
-                <a href="#" class="footer__link">
-                    <svg class="footer__link-pic color-blck">
-                        <use xlink:href="./images/icons/icons.svg#tele-link2"></use>'svg'
+                <a href="#" class="modal__link">
+                    <svg class="modal__link-pic color-blck">
+                        <use xlink:href="./images/icons/icons.svg#instagram-brown"></use>'svg'
                     </svg>
                 </a>
-                <a href="#" class="footer__link">
-                    <svg class="footer__link-pic color-blck">
-                        <use xlink:href="./images/icons/icons.svg#insta-link2"></use>'svg'
+                <a href="#" class="modal__link">
+                    <svg class="modal__link-pic color-blck">
+                        <use xlink:href="./images/icons/icons.svg#telegram-brown"></use>'svg'
                     </svg>
                 </a>
-                <a href="#" class="footer__link">
-                    <svg class="footer__link-pic color-blck">
-                        <use xlink:href="./images/icons/icons.svg#whats-link2"></use>'svg'
+                <a href="#" class="modal__link">
+                    <svg class="modal__link-pic color-blck">
+                        <use xlink:href="./images/icons/icons.svg#whatsup-brown"></use>'svg'
                     </svg>
                 </a>
             </div>
