--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="footer__container">
 
         <div class="footer__item">
@@ -23,17 +23,17 @@
         <div class="footer__item">
             <a href="#" class="footer__link">
                 <svg class="footer__link-pic">
-                    <use xlink:href="./images/icons/icons.svg#tele-link2"></use>'svg'
+                    <use xlink:href="./images/icons/icons.svg#tele-link"></use>'svg'
                 </svg>
             </a>
             <a href="#" class="footer__link">
                 <svg class="footer__link-pic">
-                    <use xlink:href="./images/icons/icons.svg#insta-link2"></use>'svg'
+                    <use xlink:href="./images/icons/icons.svg#insta-link"></use>'svg'
                 </svg>
             </a>
             <a href="#" class="footer__link">
                 <svg class="footer__link-pic">
-                    <use xlink:href="./images/icons/icons.svg#whats-link2"></use>'svg'
+                    <use xlink:href="./images/icons/icons.svg#whatsup-link"></use>'svg'
                 </svg>
             </a>
         </div>
