--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 })
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper js-index">
         @@include('html/header.html', {})
         <main class="page">
             <section class="section">
@@ -29,17 +29,17 @@
                             <div class="opening__socials">
                                 <a href="#" class="opening__socials-link">
                                     <svg class="opening__socials-pic">
-                                        <use xlink:href="./images/icons/icons.svg#insta-link"></use>'svg'
+                                        <use xlink:href="./images/icons/icons.svg#telegram-brown"></use>'svg'
                                     </svg>
                                 </a>
                                 <a href="#" class="opening__socials-link">
                                     <svg class="opening__socials-pic">
-                                        <use xlink:href="./images/icons/icons.svg#tele-link"></use>'svg'
+                                        <use xlink:href="./images/icons/icons.svg#instagram-brown"></use>'svg'
                                     </svg>
                                 </a>
                                 <a href="#" class="opening__socials-link">
                                     <svg class="opening__socials-pic">
-                                        <use xlink:href="./images/icons/icons.svg#whats-link"></use>'svg'
+                                        <use xlink:href="./images/icons/icons.svg#whatsup-brown"></use>'svg'
                                     </svg>
                                 </a>
                             </div>
