--- a/src/mc.html
+++ b/src/mc.html
@@ -5,15 +5,14 @@
 })
 
 <body>
-    <div class="wrapper">
-        @@include('html/headerMC.html', {})
+    <div class="wrapper js-mc">
+        @@include('html/header.html', {})
         <main class="page">
             <section class="section">
                 <div class="container">
 
                     <div class="titleFrame">
                         <div class="titleFrame__bg" style="background-image: url('./images/mc-titleFrame-bg.jpg');">
-                            <!-- <img src="./images/mc-titleFrame-bg.jpg" alt="bg-pic" class="titleFrame__bg-pic"> -->
                         </div>
                         <div class="titleFrame__content">
                             <div class="titleFrame__content-title">
