--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,31 +4,34 @@
             <div class="header__lists">
                 <ul class="header__list ">
                     <li class="header__list-item">
-                        <a href="../mc.html" class="header__list-link passive-link">
+                        <a href="../mc.html" class="header__list-link js-mcLink passive-link js-header-link">
                             Мастер-классы
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="../furniture.html" class="header__list-link passive-link">
+                        <a href="../furniture.html"
+                            class="header__list-link js-furnitureLink passive-link js-header-link">
                             Мебель на заказ
                         </a>
                     </li>
                 </ul>
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link passive-link">
+                        <a href="#footergit status" class="header__list-link passive-link js-header-link">
                             Контакты
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link passive-link">
+                        <a href="../aboutus.html" class="header__list-link js-aboutusLink passive-link js-header-link">
                             О нас
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="header__logo">
-                <img src="../images/logo-big.png" alt="logo" class="header__logo-pic">
+                <a href="../index.html" class="header__link">
+                    <img src="../images/logo-big.png" alt="logo" class="header__logo-pic">
+                </a>
             </div>
         </div>
         <div class="menu__bg">
