--- a/src/html/header.html
+++ b/src/html/header.html
@@ -17,7 +17,7 @@
                 </ul>
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a href="#footergit status" class="header__list-link passive-link js-header-link">
+                        <a href="#footer" class="header__list-link passive-link js-header-link">
                             Контакты
                         </a>
                     </li>
